chore: Add search functionality to the API for returning the number of games in each category. #58